# NEURAL_NETWORK_CPP

./: CMakeLists.txt  Readme.md  main.cpp  neural_networking.cpp  neural_networking.h  neuron.cpp  neuron.h
